tests/baselines/reference/computedPropertyNames2.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames2.ts(4,5): error TS9002: Computed property names are not currently supported.
tests/cases/conformance/es6/computedProperties/computedPropertyNames2.ts(5,12): error TS9002: Computed property names are not currently supported.
tests/cases/conformance/es6/computedProperties/computedPropertyNames2.ts(6,9): error TS9002: Computed property names are not currently supported.
tests/cases/conformance/es6/computedProperties/computedPropertyNames2.ts(7,9): error TS9002: Computed property names are not currently supported.
tests/cases/conformance/es6/computedProperties/computedPropertyNames2.ts(8,16): error TS9002: Computed property names are not currently supported.
tests/cases/conformance/es6/computedProperties/computedPropertyNames2.ts(9,16): error TS9002: Computed property names are not currently supported.
tests/cases/conformance/es6/computedProperties/computedPropertyNames2.ts(6,9): error TS2378: A 'get' accessor must return a value or consist of a single 'throw' statement.
tests/cases/conformance/es6/computedProperties/computedPropertyNames2.ts(8,16): error TS2378: A 'get' accessor must return a value or consist of a single 'throw' statement.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames2.ts (8 errors) ====
    var methodName = "method";
    var accessorName = "accessor";
    class C {
        [methodName]() { }
        ~~~~~~~~~~~~
!!! error TS9002: Computed property names are not currently supported.
        static [methodName]() { }
               ~~~~~~~~~~~~
!!! error TS9002: Computed property names are not currently supported.
        get [accessorName]() { }
            ~~~~~~~~~~~~~~
!!! error TS9002: Computed property names are not currently supported.
            ~~~~~~~~~~~~~~
!!! error TS2378: A 'get' accessor must return a value or consist of a single 'throw' statement.
        set [accessorName](v) { }
            ~~~~~~~~~~~~~~
!!! error TS9002: Computed property names are not currently supported.
        static get [accessorName]() { }
                   ~~~~~~~~~~~~~~
!!! error TS9002: Computed property names are not currently supported.
                   ~~~~~~~~~~~~~~
!!! error TS2378: A 'get' accessor must return a value or consist of a single 'throw' statement.
        static set [accessorName](v) { }
                   ~~~~~~~~~~~~~~
!!! error TS9002: Computed property names are not currently supported.
    }